--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFEB3B</color>
-    <color name="colorPrimaryDark">#F57F17</color>
+    <color name="colorPrimary">#673AB7</color>
+    <color name="colorPrimaryDark">#4A148C</color>
     <color name="colorAccent">#7E57C2</color>
+    <color name="colorAccent2">#FFEB3B</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGreyDark">#6D6D6D</color>
